src/objects/Permision_Set_Mapping__mdt.object
<CustomObject>
    <fields>
        <fullName>Is_DashBoard__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to differentiate Dashboard Permission set</description>
        <label>Is DashBoard?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Active_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to identify Active permission sets</description>
        <label>Is Active Required?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Permission_Set_Name__c</fullName>
        <description>Salesforce PermissionSet name</description>
        <label>Permission Set Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <label>Permision Set Mapping</label>
    <pluralLabel>Permision Set Mappings</pluralLabel>
</CustomObject>